--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>picocli</artifactId>
       <version>4.6.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>3.0.7</version>               
+    </dependency>
   </dependencies>
 
   <build>
